EMBCDFA-746 - changes in landing page html

--- a/landing-page/src/html/dfa.html
+++ b/landing-page/src/html/dfa.html
@@ -148,16 +148,20 @@ a:hover {
 	margin-bottom: 12px;
 }
 
+.linkDisp{
+	text-decoration: underline;
+}
+
 .btn--regular {
-	font-size: 18px;
-	height: 55px;
-	display: inline-block;
-	font-weight: 400;
-	line-height: 55px;
-	min-width: 300px;
-	text-align: center;
-	position: relative;
-	margin-bottom: 20px;
+    font-size: 18px;
+    height: 55px;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 55px;
+    min-width: 300px;
+    text-align: center;
+    position: relative;
+    margin-bottom: 20px;
 }
 
 
@@ -576,7 +580,10 @@ a:hover {
 					<p>If you've recently experienced a disaster and your eventis not on the eligible events list, contact your Indigenous or local government first.</p>
 				</div>
 				<div class="are-evacuated-registration center">
-					<a class="btn btn--dark-blue btn--strong" href="">Check Eligibility</a>
+					<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
+					<a class="btn--strong linkDisp" target="_blank" href="https://urldefense.com/v3/__https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/disaster-financial-assistance__;!!AKgNyAfk550h-spHnEo!a2hu9GOWT3s7Q_ZmaQEO2RpzsOueQMAcoa7ddRKy6hwVXXOlo7rXLY_pkJ2RzyqvTaYpldYuiiWwLX3q4LggVJpiT_LwHPwb$">
+						Check Eligible Events
+					</a>
 				</div>
 			</div>
 		</section>
