--- a/landing-page/src/html/dfa.html
+++ b/landing-page/src/html/dfa.html
@@ -208,7 +208,8 @@ a:hover {
 
 /** Hero **/
 .hero{
-	background: url(img/dfa_bghome.png) bottom left;
+	background: url(img/dfa_bghome.png) no-repeat center right;
+	background-size: 100%;
 }
 .hero-content {
 	padding: 30px 0 10px 0;
@@ -577,12 +578,12 @@ a:hover {
 			<div class="container --are-evacuated-cols">
 				<div class="are-evacuated-description">
 					<h1>Are you Eligible?</h1>
-					<p>If you've recently experienced a disaster and your eventis not on the eligible events list, contact your Indigenous or local government first.</p>
+					<p>If you've recently experienced a disaster and your event is not on the eligible events list, contact your Indigenous or local government first.</p>
 				</div>
 				<div class="are-evacuated-registration center">
 					<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
-					<a class="btn--strong linkDisp" target="_blank" href="https://urldefense.com/v3/__https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/disaster-financial-assistance__;!!AKgNyAfk550h-spHnEo!a2hu9GOWT3s7Q_ZmaQEO2RpzsOueQMAcoa7ddRKy6hwVXXOlo7rXLY_pkJ2RzyqvTaYpldYuiiWwLX3q4LggVJpiT_LwHPwb$">
-						Check Eligible Events
+					<a class="btn btn--regular btn--dark-blue" target="_blank" href="https://urldefense.com/v3/__https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/disaster-financial-assistance__;!!AKgNyAfk550h-spHnEo!a2hu9GOWT3s7Q_ZmaQEO2RpzsOueQMAcoa7ddRKy6hwVXXOlo7rXLY_pkJ2RzyqvTaYpldYuiiWwLX3q4LggVJpiT_LwHPwb$">
+						Check Eligiblity
 					</a>
 				</div>
 			</div>
@@ -592,20 +593,25 @@ a:hover {
 <div class="grey-wrapper">
 		
 		<section class="what-era">
-		<h2 class="widget-title">Emergency Map</h2>			<div class="textwidget"><a href="https://governmentofbc.maps.arcgis.com/apps/webappviewer/index.html?id=950b4eec577a4dc5b298a61adab41c06" target="_blank" rel="noopener"><img decoding="async" loading="lazy" class="alignnone size-full wp-image-19732" src="https://www.emergencyinfobc.gov.bc.ca/app/uploads/sites/5/2019/05/sidebar-emergencymapbc.gif" alt="EmergencyInfoBC" width="335" height="204" /></a><br><br>
-This map serves as a general reference for current public safety conditions during emergencies.<br><br>
-<strong><a href="https://governmentofbc.maps.arcgis.com/apps/webappviewer/index.html?id=950b4eec577a4dc5b298a61adab41c06" target="_blank" rel="noopener">Open Emergency Map</a></strong></div>
+			<div class="container --what-era-layout">
+				<div class="what-era-img">
+					<img class="--what-era-img" src="img/whatisera.svg" alt="ERA User Illustration">
+				</div>
+				<div class="what-era-description">
+					<h3>What is DFA?</h3>
+					<p>Disaster events can be stressful, please refer to our disaster recovery resources to help guide your next steps to recovery</p>
+					<a class="--link-light-blue" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa" target="_blank">Find out more ></a>
+				</div>
 			</div>
 		</section>
 	</div>
 			<section class="register-era">
 				<div class="container --register-era-layout">
 					<div class="register-era-description">
-						<h3>Be Evacuation Prepared - Register with DFA</h3>
-						<p>Evacuations can be stressful. However, if you take the time now to prepare you can save time and make real situations less stressful.</p>
-						<p>If you have a <strong>BC Services Card</strong> and would like to register in preparation for a possible future evacuation, you can now self-register.</p>
-						<a class="btn btn--regular btn--dark-blue" href="http://localhost:5200/registration-method" target="_blank">Self register</a>
-						<a class="--link-light-blue register-era-link" href="http://localhost:5200/registration-method" target="_blank">Already registered? Log in ></a>
+						<h3>Register with DFA</h3>
+						<p>If you have a BC Services Card and there is a declared disaster event you can now self-register for DFA</p>
+						<a class="btn btn--regular btn--dark-blue" href="https://dfa.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
+						<a class="--link-light-blue register-era-link" href="https://dfa.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
 					</div>
 					<div class="register-era-image">
 						<img class="register-era-img" src="https://ess.gov.bc.ca/img/preparedness.svg" alt="Umbrella Illustration">
