--- a/dfa/src/UI/embc-dfa/src/index.html
+++ b/dfa/src/UI/embc-dfa/src/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   </head>
   <body class="h-100 mat-typography">
     <app-root class="d-flex flex-column h-100"></app-root>
