--- a/landing-page/src/html/index.html
+++ b/landing-page/src/html/index.html
@@ -572,7 +572,12 @@ a:hover {
 <script type="text/javascript">
 	var apiUrl = 'https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/api/eligibility/checkEventsAvailable';
 
-	fetch(apiUrl).then(response => {
+	fetch(apiUrl, {
+		method: "GET", mode: 'cors', headers: {
+			'Content-Type': 'application/json',
+			'Access-Control-Allow-Origin': '*'
+		}
+	}).then(response => {
 		return response.json();
 	}).then(data => {
 
