--- a/landing-page/src/html/index.html
+++ b/landing-page/src/html/index.html
@@ -574,8 +574,7 @@ a:hover {
 
 	fetch(apiUrl, {
 		method: "GET", mode: 'cors', headers: {
-			'Content-Type': 'application/json',
-			'Access-Control-Allow-Origin': '*'
+			'Content-Type': 'application/json'
 		}
 	}).then(response => {
 		return response.json();
