--- a/landing-page/src/html/training-index.html
+++ b/landing-page/src/html/training-index.html
@@ -651,8 +651,8 @@ a:hover {
 					<div class="register-dfa-description">
 						<h3>Register with DFA</h3>
 						<p>If you have a BC Services Card and there is a declared disaster event you can now self-register for DFA</p>
-						<a class="btn btn--regular btn--dark-blue" href="https://dfa.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
-						<a class="--link-light-blue register-dfa-link" href="https://dfa.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
+						<a class="btn btn--regular btn--dark-blue" href="https://portal.training.dfa.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
+						<a class="--link-light-blue register-dfa-link" href="https://portal.training.dfa.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
 					</div>
 					<div class="register-dfa-image">
 						<img class="register-dfa-img" src="https://ess.gov.bc.ca/img/preparedness.svg" alt="Umbrella Illustration">
@@ -667,9 +667,9 @@ a:hover {
 					</div>
 					<div class="contact-cta-description">
 						<h3>Contact Us</h3>
-						<p>For questions or more information, contact the Disaster Financial Assistance team.<br>
+						<p>For questions or more information, contact the Disaster Financial Assistance team<br>
 						toll-free at <a class="--link-orange" href="tel:18882574777">1-888-257-4777</a> or by email at <a class="--link-orange" href="mailto:DFA.Private@gov.bc.ca">DFA.Private@gov.bc.ca</a> for individuals, small
-						<br>businesses, charitable organizations and farms or <a class="--link-orange" href="mailto:DFA.Public@gov.bc.ca">DFA.Public@gov.bc.ca</a> for local
+						<br>businesses, charitable organizations, and farms or <a class="--link-orange" href="mailto:DFA.Public@gov.bc.ca">DFA.Public@gov.bc.ca</a> for local
 						<br>governments and Indigenous Governing Bodies.
 						<p>Send DFA Technical Support inquiries <a class="--link-orange" href="mailto:DFA.private@gov.bc.ca">here</a>.</p>
 					</div>
