--- a/landing-page/src/html/prod-index.html
+++ b/landing-page/src/html/prod-index.html
@@ -156,6 +156,19 @@ a:hover {
 	text-decoration: underline;
 }
 
+.btn--regular {
+    font-size: 18px;
+    height: 55px;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 55px;
+    line-height: 55px;
+    min-width: 300px;
+    text-align: center;
+    position: relative;
+    margin-bottom: 20px;
+}
+
 .btn--regular1 {
     font-size: 14px;
     height: 55px;
