--- a/landing-page/src/html/training-index.html
+++ b/landing-page/src/html/training-index.html
@@ -658,8 +658,7 @@ a:hover {
 				<div class="are-evacuated-description">
 					<!--<h1>Are you Eligible?</h1>
 					<p>If you've recently experienced a disaster and your event is not on the eligible events list, contact your Indigenous or local government first.</p>-->
-					<p>Eligible event is open. To create an application select one of the buttons below. You will be required to sign in using a BC Services Card or BCeID.</p>
-
+					<p>Eligible event is open.
 					<table>
 						<tr>
 							<td>
