--- a/landing-page/src/html/prod-index.html
+++ b/landing-page/src/html/prod-index.html
@@ -33,6 +33,22 @@ table td {
 }
 
 
+table td.borderCls {
+    position: relative;
+}
+
+table td.borderCls:after {
+    position: absolute;
+    border-right: 1px solid grey;
+    content: "";
+    top: 10%;
+    bottom: 10%;
+    right: -1px;
+}
+
+/*table td.borderCls {
+    border-right: 1px solid grey;
+}*/
 
 p {
 	font-size: 16px;
@@ -57,6 +73,11 @@ h3 {
 	font-weight: 700;
 	margin-bottom: 10px;
 }
+
+.headSize {
+    text-align: center;
+}
+
 
 @media (min-width: 1024px) {
 	h1 {
@@ -658,10 +679,11 @@ a:hover {
 				<div class="are-evacuated-description">
 					<!--<h1>Are you Eligible?</h1>
 					<p>If you've recently experienced a disaster and your event is not on the eligible events list, contact your Indigenous or local government first.</p>-->
-					<p>Eligible event is open.
+					<p>
 					<table>
 						<tr>
-							<td>
+							<td class="borderCls">
+								<h3 class="headSize">Homeowner or Residential Tenant</h3>
 								<p>If you are a homeowner or residential tenant, you may submit an application by selecting this button and signing in with BC Service Card: </p>
 							
 								<div id="divHomeOwnerButton" class="are-evacuated-registration center">
@@ -672,7 +694,8 @@ a:hover {
 								</div>
 							</td>
 							<td>
-								<p>If you are a small business, farm, or charitable organization, you may submit an application by selecting this button and signing in with BCeID: </p>
+								<h3 class="headSize">Small Business, Farm, or Charitable Organization</h3>
+								<p>If you are a small business (including landlords), farm, or charitable organization, you may submit an application by selecting this button and signing in with BCeID: </p>
 
 							
 								<div id="divSmallBusinessButton" class="are-evacuated-registration center">
