--- a/landing-page/src/html/dev.html
+++ b/landing-page/src/html/dev.html
@@ -629,7 +629,7 @@ a:hover {
 
 </style>
 <script type="text/javascript">
-	var apiUrl = 'https://portal.test.dfa.gov.bc.ca/api/eligibility/checkEventsAvailable';
+	var apiUrl = 'https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/api/eligibility/checkEventsAvailable';
 
 	fetch(apiUrl, {
 		method: "GET", mode: 'cors'
@@ -688,7 +688,7 @@ a:hover {
 							
 								<div id="divHomeOwnerButton" class="are-evacuated-registration center">
 								<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
-									<a class="btn btn--regular1 btn--dark-blue" target="_blank" href="https://portal.test.dfa.gov.bc.ca/verified-registration">
+									<a class="btn btn--regular1 btn--dark-blue" target="_blank" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/verified-registration">
 										Create Homeowner or Residential Tenant Application
 									</a>
 								</div>
@@ -740,8 +740,8 @@ a:hover {
 					<div class="register-dfa-description">
 						<h3>Register with DFA</h3>
 						<p>If you have a BC Services Card and there is a declared disaster event you can now self-register for DFA</p>
-						<a class="btn btn--regular btn--dark-blue" href="https://portal.test.dfa.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
-						<a class="--link-light-blue register-dfa-link" href="https://portal.test.dfa.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
+						<a class="btn btn--regular btn--dark-blue" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
+						<a class="--link-light-blue register-dfa-link" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
 					</div>
 					<div class="register-dfa-image">
 						<img class="register-dfa-img" src="https://ess.gov.bc.ca/img/preparedness.svg" alt="Umbrella Illustration">
