--- a/landing-page/src/html/training-index.html
+++ b/landing-page/src/html/training-index.html
@@ -51,9 +51,10 @@ table td.borderCls:after {
 }*/
 
 p {
-	font-size: 16px;
-	line-height: 24px;
-	margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 h1 {
@@ -330,16 +331,16 @@ a:hover {
 
 @media (min-width: 720px) {
 	.are-evacuated-description {
-		width: 85%;
+		width: 100%;
 		padding-right: 30px;
 	}
 }
 
 @media (min-width: 1024px) {
 	.are-evacuated-description {
-		width: 85%;
+		width: 100%;
 		padding-right: 30px;
-		padding-left: 120px;
+		padding-left: 30px;
 	}
 }
 
@@ -625,6 +626,10 @@ a:hover {
         padding: 30px 0 10px 0;
         width: 50%;
     }
+
+    .fontweight90 {
+        font-weight: bold;
+    }
 }
 
 </style>
@@ -708,7 +713,7 @@ a:hover {
 						</tr>
 					</table>
 					
-					<p>Applications must be submitted within 90 days of the disaster being declared eligible.</p>
+					<p class="fontweight90">Applications must be submitted within 90 days of the disaster being declared eligible.</p>
 				</div>
 				<!--<div id="divCheckEligibilityButton" class="are-evacuated-registration center">-->
 					<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
