--- a/dfa/src/UI/embc-dfa/src/index.html
+++ b/dfa/src/UI/embc-dfa/src/index.html
@@ -15,8 +15,30 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" type="text/css" href="https://ws1.postescanada-canadapost.ca/css/addresscomplete-2.30.min.css?key=dt64-rh65-yf53-un88" />
+    <script type="text/javascript" src="https://ws1.postescanada-canadapost.ca/js/addresscomplete-2.30.min.js?key=dt64-rh65-yf53-un88"></script>
+    <script type="text/javascript">  
+    var fields = [   
+        { element: "search", field: "", mode: pca.fieldMode.SEARCH }, 
+ 
+        { element: "street-address", field: "Line1", mode: pca.fieldMode.POPULATE },   
+        { element: "street-address2", field: "Line2", mode: pca.fieldMode.POPULATE },   
+        { element: "city", field: "City", mode: pca.fieldMode.POPULATE },   
+        { element: "state", field: "ProvinceName", mode: pca.fieldMode.POPULATE },   
+        { element: "postcode", field: "PostalCode" },   
+        { element: "country", field: "CountryName", mode: pca.fieldMode.COUNTRY }, 
+ 
+        { element: "multi-unit", field: "{AcMua}", mode: pca.fieldMode.POPULATE },   
+        { element: "residential-business", field: "{AcRbdi}", mode: pca.fieldMode.POPULATE }  
+    ],  
+    options = {   
+        key: "ea53-hg74-kb59-ym41"  
+    },  
+    control = new pca.Address(fields, options); 
+</script>
   </head>
   <body class="h-100 mat-typography">
+      
     <app-root class="d-flex flex-column h-100"></app-root>
   </body>
 </html>
