--- a/dfa/src/UI/embc-dfa/src/index.html
+++ b/dfa/src/UI/embc-dfa/src/index.html
@@ -15,8 +15,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" type="text/css" href="https://ws1.postescanada-canadapost.ca/css/addresscomplete-2.30.min.css?key=dt64-rh65-yf53-un88" />
-    <script type="text/javascript" src="https://ws1.postescanada-canadapost.ca/js/addresscomplete-2.30.min.js?key=dt64-rh65-yf53-un88"></script>
+    <link rel="stylesheet" type="text/css" href="https://ws1.postescanada-canadapost.ca/css/addresscomplete-2.30.min.css?key=ma59-na36-xb12-am61" />
+    <script type="text/javascript" src="https://ws1.postescanada-canadapost.ca/js/addresscomplete-2.30.min.js?key=ma59-na36-xb12-am61"></script>
     <script type="text/javascript">  
     var fields = [   
         { element: "search", field: "", mode: pca.fieldMode.SEARCH }, 
@@ -32,7 +32,7 @@
         { element: "residential-business", field: "{AcRbdi}", mode: pca.fieldMode.POPULATE }  
     ],  
     options = {   
-        key: "ea53-hg74-kb59-ym41"  
+        key: "ma59-na36-xb12-am61"  
     },  
     control = new pca.Address(fields, options); 
 </script>
