--- a/landing-page/src/html/index_backup.html
+++ b/landing-page/src/html/index_backup.html
@@ -629,7 +629,7 @@ a:hover {
 
 </style>
 <script type="text/javascript">
-	var apiUrl = 'https://portal.dfa.gov.bc.ca/api/eligibility/checkEventsAvailable';
+	var apiUrl = 'https://portal.test.dfa.gov.bc.ca/api/eligibility/checkEventsAvailable';
 
 	fetch(apiUrl, {
 		method: "GET", mode: 'cors'
@@ -660,7 +660,7 @@ a:hover {
 			</div>
 		</div>
 	</header>
-	
+
 	<main>
 		<section class="hero">
 			<div class="container homeBackground">
@@ -673,16 +673,7 @@ a:hover {
 				</div>
 			</div>
 		</section>
-		<section class="hero">
-			<div style="background: red; padding-left: 25px; padding-right: 25px; margin-bottom: 10px; font-weight: bold;">
-				</br>
-					PLANNED OUTAGE ALERT ! - There is a scheduled system outage of the Disaster Financial Assistance portal from Friday, Dec. 8 at 4 p.m. to Monday, Dec. 11 at 9:00 am which will disrupt our services and access to the portal.
-					</br>
-					We apologize for any inconvenience caused and thank you for your patience.
-				</br>
-				</br>
-			</div>
-		</section>
+
 		<section id="secAreEvacuated" class="are-evacuated"  style="display:none;">
 			<div class="container --are-evacuated-cols">
 				<div class="are-evacuated-description">
@@ -697,7 +688,7 @@ a:hover {
 							
 								<div id="divHomeOwnerButton" class="are-evacuated-registration center">
 								<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
-									<a class="btn btn--regular1 btn--dark-blue" target="_blank" href="https://portal.dfa.gov.bc.ca/verified-registration">
+									<a class="btn btn--regular1 btn--dark-blue" target="_blank" href="https://portal.test.dfa.gov.bc.ca/verified-registration">
 										Create Homeowner or Residential Tenant Application
 									</a>
 								</div>
@@ -749,8 +740,8 @@ a:hover {
 					<div class="register-dfa-description">
 						<h3>Register with DFA</h3>
 						<p>If you have a BC Services Card and there is a declared disaster event you can now self-register for DFA</p>
-						<a class="btn btn--regular btn--dark-blue" href="https://portal.dfa.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
-						<a class="--link-light-blue register-dfa-link" href="https://portal.dfa.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
+						<a class="btn btn--regular btn--dark-blue" href="https://portal.test.dfa.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
+						<a class="--link-light-blue register-dfa-link" href="https://portal.test.dfa.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
 					</div>
 					<div class="register-dfa-image">
 						<img class="register-dfa-img" src="https://ess.gov.bc.ca/img/preparedness.svg" alt="Umbrella Illustration">
