--- a/landing-page/src/html/prod-index.html
+++ b/landing-page/src/html/prod-index.html
@@ -660,7 +660,7 @@ a:hover {
 			</div>
 		</div>
 	</header>
-
+	
 	<main>
 		<section class="hero">
 			<div class="container homeBackground">
@@ -673,7 +673,16 @@ a:hover {
 				</div>
 			</div>
 		</section>
-
+		<section class="hero">
+			<div style="background: red; padding-left: 25px; padding-right: 25px; margin-bottom: 10px; font-weight: bold;">
+				</br>
+					PLANNED OUTAGE ALERT ! - There is a scheduled system outage of the Disaster Financial Assistance portal from Friday, Dec. 8 at 4 p.m. to Monday, Dec. 11 at 9:00 am which will disrupt our services and access to the portal.
+					</br>
+					We apologize for any inconvenience caused and thank you for your patience.
+				</br>
+				</br>
+			</div>
+		</section>
 		<section id="secAreEvacuated" class="are-evacuated"  style="display:none;">
 			<div class="container --are-evacuated-cols">
 				<div class="are-evacuated-description">
