error fixing in dev

--- a/dfa/src/UI/embc-dfa/src/index.html
+++ b/dfa/src/UI/embc-dfa/src/index.html
@@ -15,9 +15,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" type="text/css" href="https://ws1.postescanada-canadapost.ca/css/addresscomplete-2.30.min.css?key=nd13-ft82-bf73-zw65" />
-    <script type="text/javascript" src="https://ws1.postescanada-canadapost.ca/js/addresscomplete-2.30.min.js?key=nd13-ft82-bf73-zw65"></script>
-    
+    <link rel="stylesheet" type="text/css" href="https://ws1.postescanada-canadapost.ca/css/addresscomplete-2.30.min.css?key=uj94-ae11-tj88-cd39" />
+    <script type="text/javascript" src="https://ws1.postescanada-canadapost.ca/js/addresscomplete-2.30.min.js?key=uj94-ae11-tj88-cd39"></script>
   </head>
   <body class="h-100 mat-typography">
       
