--- a/dfa/src/UI/embc-dfa/src/index.html
+++ b/dfa/src/UI/embc-dfa/src/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" type="text/css" href="https://ws1.postescanada-canadapost.ca/css/addresscomplete-2.30.min.css?key=uj94-ae11-tj88-cd39" />
-    <script type="text/javascript" src="https://ws1.postescanada-canadapost.ca/js/addresscomplete-2.30.min.js?key=uj94-ae11-tj88-cd39"></script>
+    <script type="text/javascript" src="https://ws1.postescanada-canadapost.ca/js/addresscomplete-2.30.min.js?key=JX95-NK22-WG59-ND87"></script>
   </head>
   <body class="h-100 mat-typography">
       
