--- a/landing-page/src/html/project-training.html
+++ b/landing-page/src/html/project-training.html
@@ -648,7 +648,7 @@
 
     </style>
     <script type="text/javascript">
-        var apiUrl = 'https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/api/eligibility/checkEventsAvailable';
+        var apiUrl = 'https://dfa-portal-training.apps.silver.devops.gov.bc.ca/api/eligibility/checkEventsAvailable';
 
         fetch(apiUrl, {
             method: "GET", mode: 'cors'
