--- a/landing-page/src/html/project-test.html
+++ b/landing-page/src/html/project-test.html
@@ -303,6 +303,7 @@ a:hover {
             background: #003366D9 0% 0% no-repeat padding-box;
             align-items: center;
             background: #003366D9 0% 0% no-repeat padding-box;
+            transition: .5s ease;
         }
 
 
