EMCRI-365 : landing page image loading issue fix

--- a/landing-page/src/html/project-dev.html
+++ b/landing-page/src/html/project-dev.html
@@ -821,7 +821,7 @@ a:hover {
 	<header class="site-header">
 		<div class="container">
 			<div class="site-header-content">
-				<a href="/" class="site-logo"><img src="https://ess.gov.bc.ca/img/gov_bc_logo.svg" alt="Government of B.C."></a>
+				<a href="/" class="site-logo"><img src="https://dfa.gov.bc.ca/img/gov_bc_logo.svg" alt="Government of B.C."></a>
 			</div>
 		</div>
 	</header>
@@ -950,7 +950,7 @@ a:hover {
 			<section class="contact-cta">
 				<div class="container --contact-cta-layout">
 					<div class="contact-cta__content">
-						<img class="contact-cta__icon" src="https://ess.gov.bc.ca/img/contact.svg" alt="Phone Illustration">
+						<img class="contact-cta__icon" src="https://dfa.gov.bc.ca/img/contact.svg" alt="Phone Illustration">
 					</div>
 					<div class="contact-cta-description">
 						<h3>Contact Us</h3>
