--- a/landing-page/src/html/index-dev.html
+++ b/landing-page/src/html/index-dev.html
@@ -1,4 +1,4 @@
-﻿
+
 
 <!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
@@ -692,17 +692,6 @@ a:hover {
 				</div>
 			</div>
 		</section>
-		
-		<section class="hero">
-			<div style="background: red; padding-left: 25px; padding-right: 25px; margin-bottom: 10px; font-weight: bold;">
-				</br>
-					PLANNED OUTAGE ALERT! - There is a scheduled system outage of the Disaster Financial Assistance portal from Tuesday July 23 at 7:00 a.m. to Tuesday July 23 at 8:00 a.m. which will disrupt our services and access to the portal.
-					</br>
-					We apologize for any inconvenience caused and thank you for your patience
-				</br>
-				</br>
-			</div>
-		</section>
 
 		<section id="secAreEvacuated" class="are-evacuated"  style="display:none;">
 			<div class="container --are-evacuated-cols">
@@ -716,7 +705,7 @@ a:hover {
 							
 								<div id="divHomeOwnerButton" class="are-evacuated-registration center">
 								<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
-									<a class="btn btn--regular1 btn--dark-blue" target="_blank" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/verified-registration">
+									<a class="btn btn--regular1 btn--dark-blue" target="_blank" href="https://portal.dev.dfa.gov.bc.ca/verified-registration">
 										Apply For DFA
 									</a>
 								<p>Apply for Disaster Financial Assistance (DFA). You may submit an<br />application by selecting this button and signing in with BC Service Card. </p>
@@ -759,8 +748,8 @@ a:hover {
 					<div class="register-dfa-description">
 						<h3>Register with DFA</h3>
 						<p>If you have a BC Services Card and there is a declared disaster event you can now self-register for DFA</p>
-						<a class="btn btn--regular btn--dark-blue" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
-						<a class="--link-light-blue register-dfa-link" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
+						<a class="btn btn--regular btn--dark-blue" href="https://portal.dev.dfa.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
+						<a class="--link-light-blue register-dfa-link" href="https://portal.dev.dfa.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
 					</div>
 					<div class="register-dfa-image">
 						<img class="register-dfa-img" src="https://ess.gov.bc.ca/img/preparedness.svg" alt="Umbrella Illustration">
