--- a/landing-page/src/html/index-test.html
+++ b/landing-page/src/html/index-test.html
@@ -1,4 +1,4 @@
-﻿
+
 
 <!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
@@ -642,13 +642,13 @@ a:hover {
 
     .fontweight90 {
         font-weight: bold;
-		text-align: center;
+        text-align: center;
     }
 }
 
 </style>
 <script type="text/javascript">
-	var apiUrl = 'https://portal.dev.gov.bc.ca/api/eligibility/checkEventsAvailable';
+	var apiUrl = 'https://portal.test.dfa.gov.bc.ca/api/eligibility/checkEventsAvailable';
 
 	fetch(apiUrl, {
 		method: "GET", mode: 'cors'
@@ -656,7 +656,7 @@ a:hover {
 		return response.json();
 	}).then(data => {
 
-		if (data > 0) {
+		if (data == true) {
 			document.getElementById('secAreEvacuated').style.display = 'block';
 		}
 		else {
@@ -692,18 +692,6 @@ a:hover {
 				</div>
 			</div>
 		</section>
-		
-		<section class="hero">
-			<div style="background: red; padding-left: 25px; padding-right: 25px; margin-bottom: 10px; font-weight: bold;">
-				</br>
-					PLANNED OUTAGE ALERT! - There is a scheduled system outage of the Disaster Financial Assistance portal from Tuesday July 23 at 7:00 a.m. to Tuesday July 23 at 8:00 a.m. which will disrupt our services and access to the portal.
-					</br>
-					We apologize for any inconvenience caused and thank you for your patience
-				</br>
-				</br>
-			</div>
-		</section>
-
 		<section id="secAreEvacuated" class="are-evacuated"  style="display:none;">
 			<div class="container --are-evacuated-cols">
 				<div class="are-evacuated-description">
@@ -716,7 +704,7 @@ a:hover {
 							
 								<div id="divHomeOwnerButton" class="are-evacuated-registration center">
 								<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
-									<a class="btn btn--regular1 btn--dark-blue" target="_blank" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/verified-registration">
+									<a class="btn btn--regular1 btn--dark-blue" target="_blank" href="https://portal.test.dfa.gov.bc.ca/verified-registration">
 										Apply For DFA
 									</a>
 								<p>Apply for Disaster Financial Assistance (DFA). You may submit an<br />application by selecting this button and signing in with BC Service Card. </p>
@@ -726,8 +714,8 @@ a:hover {
 							</td>
 						</tr>
 					</table>
-
-					<p class="fontweight90">Applications must be submitted within 90 days of the disaster being declared eligible.</p>
+					
+					<p class="fontweight90">Applications must be submitted within 90 days of the disaster being declared eligible.</pclass="fontweight90">
 				</div>
 				<!--<div id="divCheckEligibilityButton" class="are-evacuated-registration center">-->
 					<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
@@ -759,8 +747,8 @@ a:hover {
 					<div class="register-dfa-description">
 						<h3>Register with DFA</h3>
 						<p>If you have a BC Services Card and there is a declared disaster event you can now self-register for DFA</p>
-						<a class="btn btn--regular btn--dark-blue" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
-						<a class="--link-light-blue register-dfa-link" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
+						<a class="btn btn--regular btn--dark-blue" href="https://portal.test.dfa.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
+						<a class="--link-light-blue register-dfa-link" href="https://portal.test.dfa.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
 					</div>
 					<div class="register-dfa-image">
 						<img class="register-dfa-img" src="https://ess.gov.bc.ca/img/preparedness.svg" alt="Umbrella Illustration">
