--- a/landing-page/src/html/index.html
+++ b/landing-page/src/html/index.html
@@ -675,7 +675,7 @@ a:hover {
 	<header class="site-header">
 		<div class="container">
 			<div class="site-header-content">
-				<a href="/" class="site-logo"><img src="https://ess.gov.bc.ca/img/gov_bc_logo.svg" alt="Government of B.C."></a>
+				<a href="/" class="site-logo"><img src="https://ess.gov.bc.ca/app/themes/bcgov-wordpress-block-theme/assets/images/bc_gov_logo_reverse.svg" alt="Government of B.C."></a>
 			</div>
 		</div>
 	</header>
@@ -763,7 +763,7 @@ a:hover {
 						<a class="--link-light-blue register-dfa-link" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
 					</div>
 					<div class="register-dfa-image">
-						<img class="register-dfa-img" src="https://ess.gov.bc.ca/img/preparedness.svg" alt="Umbrella Illustration">
+						<img class="register-dfa-img" src="https://ess.gov.bc.ca/app/uploads/sites/931/2024/06/noun-umbrella-5817185-333333.png" alt="Umbrella Illustration">
 					</div>
 				</div>
 			</section>
@@ -771,7 +771,7 @@ a:hover {
 			<section class="contact-cta">
 				<div class="container --contact-cta-layout">
 					<div class="contact-cta__content">
-						<img class="contact-cta__icon" src="https://ess.gov.bc.ca/img/contact.svg" alt="Phone Illustration">
+						<img class="contact-cta__icon" src="https://ess.gov.bc.ca/app/uploads/sites/931/2024/06/noun-contact-4203636-1E5296-1.png" alt="Phone Illustration">
 					</div>
 					<div class="contact-cta-description">
 						<h3>Contact Us</h3>
