--- a/landing-page/src/html/index.html
+++ b/landing-page/src/html/index.html
@@ -675,7 +675,7 @@ a:hover {
 	<header class="site-header">
 		<div class="container">
 			<div class="site-header-content">
-				<a href="/" class="site-logo"><img src="https://ess.gov.bc.ca/app/themes/bcgov-wordpress-block-theme/assets/images/bc_gov_logo_reverse.svg" alt="Government of B.C."></a>
+				<a href="/" class="site-logo"><img src="https://portal.dfa.gov.bc.ca/assets/images/bcid-logo-rev-en.svg" alt="Government of B.C."></a>
 			</div>
 		</div>
 	</header>
