--- a/landing-page/src/html/index.test.html
+++ b/landing-page/src/html/index.test.html
@@ -762,8 +762,8 @@ a:hover {
 					<div class="register-dfa-description">
 						<h3>Register with DFA</h3>
 						<p>If you have a BC Services Card and there is a declared disaster event you can now self-register for DFA</p>
-						<a class="btn btn--regular btn--dark-blue" href="https://dfa-portal-test.apps.silver.devops.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
-						<a class="--link-light-blue register-dfa-link" href="https://dfa-portal-test.apps.silver.devops.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
+						<a class="btn btn--regular btn--dark-blue" href="https://portal.test.dfa.gov.bc.ca/registration-method" target="_blank">Create Profile</a>
+						<a class="--link-light-blue register-dfa-link" href="https://portal.test.dfa.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
 					</div>
 					<div class="register-dfa-image">
 						<img class="register-dfa-img" src="https://ess.gov.bc.ca/app/uploads/sites/931/2024/06/noun-umbrella-5817185-333333.png" alt="Umbrella Illustration">
