--- a/landing-page/src/html/index-test.html
+++ b/landing-page/src/html/index-test.html
@@ -651,7 +651,7 @@ a:hover {
 	var apiUrl = 'https://portal.test.dfa.gov.bc.ca/api/eligibility/checkEventsAvailable';
 
 	fetch(apiUrl, {
-		method: "GET", mode: 'cors'
+		method: "GET", mode: 'no-cors'
 	}).then(response => {
 		return response.json();
 	}).then(data => {
