--- a/landing-page/src/html/index.test.html
+++ b/landing-page/src/html/index.test.html
@@ -648,7 +648,7 @@ a:hover {
 
 </style>
 <script type="text/javascript">
-	var apiUrl = 'https://dfa-portal-test.apps.silver.devops.gov.bc.ca/api/eligibility/checkEventsAvailable';
+	var apiUrl = 'https://portal.test.dfa.gov.bc.ca/api/eligibility/checkEventsAvailable';
 
 	fetch(apiUrl, {
 		method: "GET", mode: 'no-cors'
