EMBCDFA-1066: Update colors on banners for consistency with portal

--- a/landing-page/src/html/index.html
+++ b/landing-page/src/html/index.html
@@ -650,7 +650,7 @@ a:hover {
 		justify-content: space-between;
 		text-align: center;
 		color: white;
-		background-color: rgb(189, 0, 91);
+		background-color: #097d8c;
 		p {
 			margin-top: 10px;
 		}
@@ -684,10 +684,10 @@ a:hover {
 <body>
 	<div class="environment-banner"">
 		<p>
-		  	You are in the <b>DEV</b> version of the Disaster Financial Assistance (DFA) portal.
+		  	You are in the <b>DEV</b> version of the <b>Disaster Financial Assistance Tool</b>.
 		</p>
 		<p>
-		  	All information here will be treated as <b>DEV</b> data.
+		  	All information entered here will be treated as <b>dev</b> data.
 		</p>
 	</div>	  
 	<header class="site-header">
