--- a/landing-page/src/html/index.test.html
+++ b/landing-page/src/html/index.test.html
@@ -650,7 +650,7 @@ a:hover {
 		justify-content: space-between;
 		text-align: center;
 		color: white;
-		background-color: rgb(0, 128, 91);
+		background-color: #800080;
 		p {
 			margin-top: 10px;
 		}
@@ -684,12 +684,12 @@ a:hover {
 <body>
 	<div class="environment-banner"">
 		<p>
-		  	You are in the <b>TEST</b> version of the Disaster Financial Assistance (DFA) portal.
+		  	You are in the <b>TEST</b> version of the <b>Disaster Financial Assistance Tool</b>.
 		</p>
 		<p>
-		  	All information here will be treated as <b>TEST</b> data.
+		  	All information entered here will be treated as <b>test</b> data.
 		</p>
-	</div>	
+	</div>
 	<header class="site-header">
 		<div class="container">
 			<div class="site-header-content">
