--- a/landing-page/src/html/training-index.html
+++ b/landing-page/src/html/training-index.html
@@ -650,7 +650,7 @@ a:hover {
 		justify-content: space-between;
 		text-align: center;
 		color: white;
-		background-color: rgb(99, 0, 145);
+		background-color: #fc6621;
 		p {
 			margin-top: 10px;
 		}
@@ -684,12 +684,12 @@ a:hover {
 <body>
 	<div class="environment-banner"">
 		<p>
-		  	You are in the <b>TRAINING</b> version of the Disaster Financial Assistance (DFA) portal.
+		  	You are in the <b>TRAINING</b> version of the <b>Disaster Financial Assistance Tool</b>.
 		</p>
 		<p>
-		  	All information here will be treated as <b>TRAINING</b> data.
+		  	All information entered here will be treated as <b>training</b> data.
 		</p>
-	</div>	
+	</div>
 	<header class="site-header">
 		<div class="container">
 			<div class="site-header-content">
