Update outage banners for 2024-10-09 release

--- a/landing-page/src/html/index.prod.html
+++ b/landing-page/src/html/index.prod.html
@@ -699,7 +699,7 @@ a:hover {
 				PLANNED OUTAGE ALERT!
 				</br>
 				</br>
-				There is a scheduled system outage of the Disaster Financial Assistance portal from Thursday September 5 at 12:00 p.m. to Thursday September 5 at 1:00 p.m. which will disrupt our services and access to the portal.
+				There is a scheduled system outage of the Disaster Financial Assistance portal from Wednesday October 9 at 7:00 a.m. to Wednesday October 9 at 8:00 a.m. which will disrupt our services and access to the portal.
 				</br>
 				We apologize for any inconvenience caused and thank you for your patience.
 				</br>
