Landing page - support stream

--- a/landing-page/src/html/support-dev.html
+++ b/landing-page/src/html/support-dev.html
@@ -723,7 +723,7 @@ a:hover {
 </style>
 <script type="text/javascript">
 	var privatePortal = 'https://portal.dev.dfa.gov.bc.ca/'
-	var publicPortal = 'https://publicsector-dev.dfa.gov.bc.ca'
+	var publicPortal = 'https://dfa-public-sector-dev.apps.silver.devops.gov.bc.ca'
 
 	var apiPrivateUrl = privatePortal + '/api/eligibility/checkEventsAvailable';
 	var eventButtonPrivateUrl = privatePortal + '/verified-registration';
