Landing page - events list issue

--- a/landing-page/src/html/index.html
+++ b/landing-page/src/html/index.html
@@ -722,7 +722,7 @@ a:hover {
 
 </style>
 <script type="text/javascript">
-	var privatePortal = 'https://portal.dev.dfa.gov.bc.ca/'
+	var privatePortal = 'https://portal.dev.dfa.gov.bc.ca'
 	var publicPortal = 'https://dfa-public-sector-dev.apps.silver.devops.gov.bc.ca'
 
 	var apiPrivateUrl = privatePortal + '/api/eligibility/checkEventsAvailable';
