Implement new routes for public portal on dev and test (#676)

--- a/landing-page/src/html/index.test.html
+++ b/landing-page/src/html/index.test.html
@@ -734,7 +734,7 @@ a:hover {
 </style>
 <script type="text/javascript">
 	var privatePortal = 'https://portal.test.dfa.gov.bc.ca'
-	var publicPortal = 'https://dfa-public-sector-test.apps.silver.devops.gov.bc.ca'
+	var publicPortal = 'https://publicsector-test.dfa.gov.bc.ca'
 
 	var apiPrivateUrl = privatePortal + '/api/eligibility/checkEventsAvailable';
 	var eventButtonPrivateUrl = privatePortal + '/verified-registration';
