Fix landing page env banner colour (#694)

--- a/landing-page/src/html/index.training.html
+++ b/landing-page/src/html/index.training.html
@@ -650,7 +650,7 @@ a:hover {
 		justify-content: space-between;
 		text-align: center;
 		color: white;
-		background-color: #fc6621;
+		background-color: #630091;
 		p {
 			margin-top: 10px;
 		}
