Add outage banner for 2025-01-22 release event, create separate prod index.html files until DFA 3.1 release (#726)

--- a/landing-page/src/html/index.training.html
+++ b/landing-page/src/html/index.training.html
@@ -554,6 +554,10 @@ a:hover {
 	width: 120px;
 }
 
+.contact-cta .container {
+	max-width: 900px;
+}
+
 /** Footer **/
 
 .site-footer {
@@ -708,6 +712,26 @@ a:hover {
 						<p class="lead headerText"><a class="--link-light-blue --link-strong" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/disaster-financial-assistance" target="_blank">Learn more ></a></p>
 					</div>
 				</div>
+			</div>
+		</section>
+
+		<section class="hero">
+			<div style="background: rgb(190, 0, 0); color: rgb(255, 255, 255); text-align: center; padding-left: 25px; padding-right: 25px; margin-bottom: 10px; font-weight: bold;">
+				</br>
+				PLANNED OUTAGE ALERT!
+				</br>
+				</br>
+				There is a scheduled system outage of the Disaster Financial Assistance portal from </br><i>Wednesday January 22 at 3:00 p.m. to Friday January 24 at 3:00 p.m.</i></br> which will disrupt our services and access to the portal.
+                </br>
+                </br>
+                Please ensure you are logged out of the portal by <u>3:00 p.m. on Wednesday January 22</u></br> to ensure that your application information is saved.
+                </br>
+                </br>
+				We apologize for any inconvenience caused and thank you for your patience.
+                </br>
+                If you have any questions, please contact <a class="--link-orange" href="mailto:DFA.private@gov.bc.ca">DFA.private@gov.bc.ca</a>.
+				</br>
+				</br>
 			</div>
 		</section>
 
