--- a/landing-page/src/html/index.prod-nomessage.new.html
+++ b/landing-page/src/html/index.prod-nomessage.new.html
@@ -1,4 +1,4 @@
-﻿
+
 
 <!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
@@ -278,7 +278,7 @@ a:hover {
 .overlay-content {
     /*background-color: green;*/
     height: 70px;
-    width: 400px;
+    width: 300px;
     min-width: 300px;
     border: 4px solid white;
     cursor: pointer;
@@ -625,11 +625,6 @@ a:hover {
 	width: 120px;
 }
 
-.contact-cta .container {
-	max-width: 900px;
-}
-
-
 /** Footer **/
 
 .site-footer {
@@ -723,28 +718,18 @@ a:hover {
         font-weight: bold;
 		text-align: center;
     }
-	.environment-banner {
-		max-width: 100%;
-		padding: 10px 0px;
-		justify-content: space-between;
-		text-align: center;
-		color: white;
-		background-color: #097d8c;
-		p {
-			margin-top: 10px;
-		}
-	}
 }
 
 </style>
 <script type="text/javascript">
-	var privatePortal = 'https://portal.dev.dfa.gov.bc.ca'
-	var publicPortal = 'https://publicsector-dev.dfa.gov.bc.ca'
+	var privatePortal = 'https://dfa-portal-test.apps.silver.devops.gov.bc.ca'
+	var publicPortal = 'https://dfa-public-sector-test.apps.silver.devops.gov.bc.ca'
 
 	var apiPrivateUrl = privatePortal + '/api/eligibility/checkEventsAvailable';
 	var eventButtonPrivateUrl = privatePortal + '/verified-registration';
 	var noeventButtonPrivateUrl = privatePortal + '/verified-registration';
 
+<<<<<<<< HEAD:landing-page/src/html/project-test.html
 	var apiPublicUrl = publicPortal + '/api/eligibility/checkPublicEventsAvailable';
 	var eventButtonPublicUrl = publicPortal + '/verified-registration'
 	var noeventButtonPublicUrl = publicPortal + '/verified-registration'
@@ -826,6 +811,10 @@ a:hover {
 			document.getElementById('overlay-content-loc').style.display = 'none';
 			document.getElementById('overlay-content-ind').style.display = 'block';
 			divOverlay.style.left = "0%";
+========
+		if (data > 0) {
+			document.getElementById('secAreEvacuated').style.display = 'block';
+>>>>>>>> origin/support-develop:landing-page/src/html/index.prod-nomessage.html
 		}
 	}
 
@@ -833,19 +822,15 @@ a:hover {
 </head>
 
 <body onload="onLoad()">
-	<div class="environment-banner">
-		<p>
-		  	You are in the <b>DEV</b> version of the <b>Disaster Financial Assistance Tool</b>.
-		</p>
-		<p>
-		  	All information entered here will be treated as <b>dev</b> data.
-		</p>
-	</div>
-	
+
 	<header class="site-header">
 		<div class="container">
 			<div class="site-header-content">
+<<<<<<<< HEAD:landing-page/src/html/project-test.html
 				<a href="/" class="site-logo"><img src="https://dfa.gov.bc.ca/img/gov_bc_logo.svg" alt="Government of B.C."></a>
+========
+				<a href="/" class="site-logo"><img src="https://portal.dfa.gov.bc.ca/assets/images/bcid-logo-rev-en.svg" alt="Government of B.C."></a>
+>>>>>>>> origin/support-develop:landing-page/src/html/index.prod-nomessage.html
 			</div>
 		</div>
 	</header>
@@ -862,31 +847,52 @@ a:hover {
 				</div>
 			</div>
 		</section>
+<<<<<<<< HEAD:landing-page/src/html/project-test.html
+========
+		
 
-		<section class="hero">
-			<div style="background: rgb(190, 0, 0); color: rgb(255, 255, 255); text-align: center; padding-left: 25px; padding-right: 25px; margin-bottom: 10px; font-weight: bold;">
-				</br>
-				PLANNED OUTAGE ALERT!
-				</br>
-				</br>
-				There is a scheduled system outage of the Disaster Financial Assistance portal from </br><i>Wednesday January 22 at 3:00 p.m. to Friday January 24 at 3:00 p.m.</i></br> which will disrupt our services and access to the portal.
-                </br>
-                </br>
-                Please ensure you are logged out of the portal by <u>3:00 p.m. on Wednesday January 22</u></br> to ensure that your application information is saved.
-                </br>
-                </br>
-				We apologize for any inconvenience caused and thank you for your patience.
-                </br>
-                If you have any questions, please contact <a class="--link-orange" href="mailto:DFA.private@gov.bc.ca">DFA.private@gov.bc.ca</a>.
-				</br>
-				</br>
+		<section id="secAreEvacuated" class="are-evacuated"  style="display:none;">
+			<div class="container --are-evacuated-cols">
+				<div class="are-evacuated-description">
+					<!--<h1>Are you Eligible?</h1>
+					<p>If you've recently experienced a disaster and your event is not on the eligible events list, contact your Indigenous or local government first.</p>-->
+					<p>
+					<table style="width: 100%;">
+						<tr>
+							<td class="borderCls">
+							
+								<div id="divHomeOwnerButton" class="are-evacuated-registration center">
+								<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
+									<a class="btn btn--regular1 btn--dark-blue" target="_blank" href="https://portal.dfa.gov.bc.ca/verified-registration">
+										Apply For DFA
+									</a>
+								<p>Apply for Disaster Financial Assistance (DFA). You may submit an<br />application by selecting this button and signing in with BC Service Card. </p>
+
+								</div>
+
+							</td>
+						</tr>
+					</table>
+
+					<p class="fontweight90">Applications must be submitted within 90 days of the disaster being declared eligible.</p>
+				</div>
+				<!--<div id="divCheckEligibilityButton" class="are-evacuated-registration center">-->
+					<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
+					<!--<a class="btn btn--regular btn--dark-blue" target="_blank" href="https://urldefense.com/v3/__https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/disaster-financial-assistance__;!!AKgNyAfk550h-spHnEo!a2hu9GOWT3s7Q_ZmaQEO2RpzsOueQMAcoa7ddRKy6hwVXXOlo7rXLY_pkJ2RzyqvTaYpldYuiiWwLX3q4LggVJpiT_LwHPwb$">
+						Check Eligiblity
+					</a>
+				</div>-->
 			</div>
 		</section>
+
+
+<div class="grey-wrapper">
+>>>>>>>> origin/support-develop:landing-page/src/html/index.prod-nomessage.html
 		
 		<div class="toggle-div">
 			<div class="overlay" id="overlay">
 				<div class="overlay-content" id="overlay-content-loc" onclick="switchSection(1)">
-					<p>Switch to<br />Indigenous Governing Bodies and Local Authorities</p>
+					<p>Switch to<br />Local Governments and First Nations</p>
 				</div>
 				<div class="overlay-content" id="overlay-content-ind" onclick="switchSection(0)" style="display: none;">
 					<p>Switch to<br />Individuals and Organizations</p>
@@ -911,7 +917,7 @@ a:hover {
 							<img class="--what-dfa-img" src="img/whatisdfa.svg" alt="DFA User Illustration">
 						</div>-->
 						<div class="what-dfa-description">
-							<p>For <b>Indigenous Governing Bodies and Local Authorities</b>, the DFA program may provide communities with financial assistance for damaged infrastructure.</p>
+							<p>For <b>Indigenous communities and local governments</b>, the DFA program may provide communities with financial assistance for damaged infrastructure.</p>
 							<a class="--link-light-blue" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa" target="_blank">Public Communities information… ></a>
 						</div>
 					</div>
@@ -951,8 +957,8 @@ a:hover {
 						<table style="width: 100%;">
 							<tr>
 								<td>
-									<p style="display:none" id="eventTextPublic">For Indigenous Governing Bodies and Local Authorities only, log in with your Business BCeID to create an application.</p>
-									<p id="noeventTextPublic">For Indigenous Governing Bodies and Local Authorities to check the status of your application, log in with your Business BCeID.</p>
+									<p style="display:none" id="eventTextPublic">For Indigenous communities and local governments only, log in with your Business BCeID to create an application.</p>
+									<p id="noeventTextPublic">For Indigenous communities and local governments to check the status of your application, log in with your Business BCeID.</p>
 					
 									<div id="divHomeOwnerButton" class="are-evacuated-registration center">
 									<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
@@ -986,7 +992,7 @@ a:hover {
 						<a class="--link-light-blue register-dfa-link" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
 					</div>
 					<div class="register-dfa-image">
-						<img class="register-dfa-img" src="https://ess.gov.bc.ca/img/preparedness.svg" alt="Umbrella Illustration">
+						<img class="register-dfa-img" src="https://ess.gov.bc.ca/app/uploads/sites/931/2024/06/noun-umbrella-5817185-333333.png" alt="Umbrella Illustration">
 					</div>
 				</div>
 			</section>-->
@@ -994,13 +1000,18 @@ a:hover {
 			<section class="contact-cta">
 				<div class="container --contact-cta-layout">
 					<div class="contact-cta__content">
+<<<<<<<< HEAD:landing-page/src/html/project-test.html
 						<img class="contact-cta__icon" src="https://dfa.gov.bc.ca/img/contact.svg" alt="Phone Illustration">
+========
+						<img class="contact-cta__icon" src="https://ess.gov.bc.ca/app/uploads/sites/931/2024/06/noun-contact-4203636-1E5296-1.png" alt="Phone Illustration">
+>>>>>>>> origin/support-develop:landing-page/src/html/index.prod-nomessage.html
 					</div>
 					<div class="contact-cta-description">
 						<h3>Contact Us</h3>
 						<p>For questions or more information, contact the Disaster Financial Assistance team
 						toll-free at <a class="--link-orange" href="tel:18882574777">1-888-257-4777</a> or by email at <a class="--link-orange" href="mailto:DFA.Private@gov.bc.ca">DFA.Private@gov.bc.ca</a> for individuals, small
-						<br>businesses, charitable organizations, and farms or <a class="--link-orange" href="mailto:DFA.Public@gov.bc.ca">DFA.Public@gov.bc.ca</a> for Indigenous Governing Bodies and Local Authorities.</p>
+						<br>businesses, charitable organizations, and farms or <a class="--link-orange" href="mailto:DFA.Public@gov.bc.ca">DFA.Public@gov.bc.ca</a> for local
+						governments and Indigenous Governing Bodies.
 						<p>Send DFA Technical Support inquiries <a class="--link-orange" href="mailto:DFA.private@gov.bc.ca">here</a>.</p>
 					</div>
 				</div>
