--- a/landing-page/src/html/index.prod-nomessage.new.html
+++ b/landing-page/src/html/index.prod-nomessage.new.html
@@ -730,12 +730,12 @@ a:hover {
 	var publicPortal = 'https://publicsector.dfa.gov.bc.ca'
 
 	var apiPrivateUrl = privatePortal + '/api/eligibility/checkEventsAvailable';
-	var eventButtonPrivateUrl = privatePortal + '/verified-registration';
-	var noeventButtonPrivateUrl = privatePortal + '/verified-registration';
+	var eventButtonPrivateUrl = privatePortal + '/registration-method';
+	var noeventButtonPrivateUrl = privatePortal + '/registration-method';
   
 	var apiPublicUrl = publicPortal + '/api/eligibility/checkPublicEventsAvailable';
-	var eventButtonPublicUrl = publicPortal + '/verified-registration'
-	var noeventButtonPublicUrl = publicPortal + '/verified-registration'
+	var eventButtonPublicUrl = publicPortal + '/registration-method'
+	var noeventButtonPublicUrl = publicPortal + '/registration-method'
 
     function callAPIs() {
 		fetch(apiPublicUrl, {
@@ -858,7 +858,7 @@ a:hover {
 							
 								<div id="divHomeOwnerButton" class="are-evacuated-registration center">
 								<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
-									<a class="btn btn--regular1 btn--dark-blue" target="_blank" href="https://portal.dfa.gov.bc.ca/verified-registration">
+									<a class="btn btn--regular1 btn--dark-blue" target="_blank" href="https://portal.dfa.gov.bc.ca/registration-method">
 										Apply For DFA
 									</a>
 								<p>Apply for Disaster Financial Assistance (DFA). You may submit an<br />application by selecting this button and signing in with BC Service Card. </p>
