Add outage banner for 2025-02-19 release event (#752)

--- a/landing-page/src/html/index.prod.html
+++ b/landing-page/src/html/index.prod.html
@@ -703,10 +703,10 @@ a:hover {
 				PLANNED OUTAGE ALERT!
 				</br>
 				</br>
-				There is a scheduled system outage of the Disaster Financial Assistance portal from </br><i>Wednesday January 22 at 3:00 p.m. to Friday January 24 at 3:00 p.m.</i></br> which will disrupt our services and access to the portal.
+				There is a scheduled system outage of the Disaster Financial Assistance portal from </br><i>Wednesday February 19 at 6:00 a.m. to Wednesday February 19 at 12:00 p.m.</i></br> which will disrupt our services and access to the portal.
                 </br>
                 </br>
-                Please ensure you are logged out of the portal by <u>3:00 p.m. on Wednesday January 22</u></br> to ensure that your application information is saved.
+                Please ensure you are logged out of the portal by <u>6:00 a.m. on Wednesday February 19</u></br> to ensure that your application information is saved.
                 </br>
                 </br>
 				We apologize for any inconvenience caused and thank you for your patience.
